# Obsidian

./: .gitignore  .gitmodules  .jenkins_runBench.sh  .jenkins_script.sh  BuildingBlocks.hs  Ex.hs  ExampleApa.hs  Examples.hs  ExamplesNoCUDA.hs  LICENSE  Obsidian.cabal  Obsidian.cabal_OUTDATED  Obsidian.hs  README.md  README.org  Scans.hs  SorterExamples.hs  TODO.txt
Benchmarks/: Makefile  README.org  run_benchmarks.cabal  run_benchmarks.hs
Benchmarks/FractalBench/: Fractals.cabal  Fractals.hs  FractalsBench.hs
Benchmarks/GridSizeBench/: GridSizeBench.cabal  GridSizeBench.hs  README.org
Benchmarks/MapLadder/: MapLadder.cabal
Benchmarks/ReductionBench/: Reduce.cabal  Reduce.hs  ReduceBench.hs
Benchmarks/ScanBench/: Reduce.hs  Scan.cabal  Scan.hs  ScanBench.hs
Benchmarks/ScanBench2/: Scan.hs  Scan2.cabal  ScanBench2.hs
Benchmarks/SyncCostBench/: SyncCostBench.cabal  SyncCostBench.hs
Benchmarks/SyncCostNumWarpsBench/: LICENSE  SyncCostNumWarpsBench.cabal  SyncCostNumWarpsBench.hs
CUDA/MM/: Makefile  mm.cu
Examples/: Makefile  run_benchmarks.cabal  run_benchmarks.hs
Examples/FractalBench/: Fractals.cabal  Fractals.hs  FractalsBench.hs
Examples/GridSizeBench/: GridSizeBench.hs
Examples/Intro/: Intro.cabal  Intro.hs  LICENSE
Examples/MapLadder/: MapLadder.cabal  MapLadder_Obsidian.hs
Examples/ReductionTutorial/: Main.hs  Reduce.cabal  Reduce.hs  ReduceBench.hs  ReduceExec.hs
Examples/ScanBench/: Reduce.hs  Scan.cabal  Scan.hs  ScanBench.hs
Examples/Simple/: AsBlockMap.hs  AsBlockMapExec.hs  Fractals.hs  FractalsExec.hs  Histogram.hs  Histogram.hs~  HistogramExec.hs  HistogramExec.hs~  Increment.hs  LargeScan.hs  MatMul.hs  MatMulExec.hs  Reconstruct.hs  ReconstructExec.hs  ReduceIntro.hs  Reduction.hs  ReductionExec.hs  Scan.hs  ScanExec.hs  Simple.cabal  Simple.hs  SortNet.hs  SortNetExec.hs  largeScan.hs
Obsidian/: Analysis.hs  Array.hs  Atomic.hs  Data.hs  DimSpec.hs  Dimension.hs  Exp.hs  Force.hs  GCDObsidian.hs  Globs.hs  Helpers.hs  Library.hs  LibraryG.hs  Lift.hs  Memory.hs  ModifyArray.hs  MultiDim.hs  MultiDimForce.hs  MultiDimLib.hs  Mutable.hs  Names.hs  Printing.hs  Program.hs  SeqLoop.hs  Shape.hs  Types.hs
Obsidian/AddOn/: ArrowObsidian.hs
Obsidian/CodeGen/: C.hs  CUDA.hs  Common.hs  CompileIM.hs  CompileIMOpenCLEmbedded.hs  InOut.hs  Liveness.hs  Memory.hs  Memory2.hs  OpenCL.hs  OpenCLEmbedded.hs  PP.hs  Program.hs  Reify.hs  SPMDC.hs  SyncAnalysis.hs
Obsidian/CodeGen/CUDA/: WithCUDA.hs
Obsidian/CodeGen/CUDA/WithCUDA/: Compile.hs  Exec.hs  Text.hs
Obsidian/Data/: Float.hs
Obsidian/GCDObsidian/: Analysis.hs  Array.hs  Exp.hs  Globs.hs  Helpers.hs  Library.hs  Memory.hs  Printing.hs  Program.hs
Obsidian/GCDObsidian/AddOn/: ArrowObsidian.hs  SortLang.hs
Obsidian/GCDObsidian/CodeGen/: Common.hs  InOut.hs  PP.hs  SPMDC.hs  SyncAnalysis.hs
Obsidian/GCDObsidian/CodeGen/CUDA/: Compile.hs  WithCUDA.hs
Obsidian/Run/CUDA/: Exec.hs
Tests/: README.md  Test1.hs
