Name:           Obsidian
Version:        0.1.0.0


License:                BSD3
License-file:           LICENSE
Stability:              Beta
Maintainer:		Joel Svensson<svenssonjoel@yahoo.se>
Author:			Joel Svensson<svenssonjoel@yahoo.se>

Copyright:              Copyright (c) 2011-2014 Joel Svensson 		  			
  
Synopsis:               Embedded language for GPU Programming 
HomePage:               https://github.com/svenssonjoel/Obsidian
Description: 
   Obsidian is an embedded language for general purpose programming targeting 
   GPU's. 

Category: Language
Cabal-Version: >=1.8
Tested-With: GHC == 7.6.1

build-type: Simple

source-repository head
  type:     git
  location: git://github.com/svenssonjoel/Obsidian.git

----------------------------------------------------------------------------------------------------
Library
  -- Stable packages, no upper bounds
  build-depends: base >= 4 && < 5
               , vector           >= 0.10.9.1 
               , mtl              >= 2.0 
               , containers       >= 0.4.2.1
               , text             >= 0.11.3.1
               , process          >= 1.1.0.2
               , rdtsc            == 1.3.0.0  
  -- Less-stable packages, upper bounds on next major version:
  build-depends: value-supply     >= 0.6      && < 0.7
               , language-c-quote >= 0.7.2    && < 0.8
               , mainland-pretty  >= 0.2.6    && < 0.3
               , mwc-random       >= 0.13.1.1 && < 0.14
               , cuda             >= 0.5.1.1  && < 0.6
             
  exposed-modules: Obsidian
                 ,  Obsidian.CodeGen.CUDA
                 ,  Obsidian.Run.CUDA.Exec                    
            
  other-modules:  Obsidian.Array
               ,  Obsidian.Atomic
               ,  Obsidian.DimSpec
               ,  Obsidian.Exp
               ,  Obsidian.Force
               ,  Obsidian.Globs
               ,  Obsidian.Library
               ,  Obsidian.Memory
               ,  Obsidian.Mutable
               ,  Obsidian.Names
               ,  Obsidian.Program 
               ,  Obsidian.SeqLoop 
               ,  Obsidian.Types 
               ,  Obsidian.CodeGen.CompileIM
               ,  Obsidian.CodeGen.Liveness
               ,  Obsidian.CodeGen.Memory
               ,  Obsidian.CodeGen.Program
               ,  Obsidian.CodeGen.Reify 
              

        
  GHC-Options: 
-- -O2 

--  include-dirs:


--  extra-lib-dirs: 

--  Includes: 
--  Extra-libraries: 
  

