name:                MapLadder
version:             0.1.0.0
-- The license under which the package is released.
license:             BSD3
-- license-file:        LICENSE
author:              Ryan Newton
maintainer:          bo.joel.svensson@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

executable MapLadder_Obsidian.exe 
  main-is: MapLadder_Obsidian.hs
  
  other-extensions: ScopedTypeVariables
                  , MultiParamTypeClasses
                  , NoMonomorphismRestriction
                  , TypeOperators
                  , TypeSynonymInstances
                  , FlexibleInstances
                  , FlexibleContexts
  
  -- Other library packages from which modules are imported.
  build-depends: base >=4.6 && <4.7
               , vector >=0.10 && <0.11
               , mtl >=2.1 && <2.2
               , random >=1.0 && <1.1
               , bytestring >=0.10 && <0.11
               , Obsidian >= 0.0.1.8
               , rdtsc >= 1.3, time >= 1.4
  -- Directories containing source files.
  -- hs-source-dirs:      
  
  -- Base language which the package is written in.
  default-language:    Haskell2010

 
